# caffeine

./: CMakeLists.txt  build-all.bat  caff.code-workspace
client/: CMakeLists.txt  build-client.bat  client_main.c  entry.c  main.c
collections/: CMakeLists.txt  caffeine_array.c  caffeine_array.h  caffeine_container.c  caffeine_container_type.h  caffeine_containter_interface.h  caffeine_hashmap.c  caffeine_hashmap.h  caffeine_iterator.c  caffeine_iterator.h  caffeine_linked_list.c  caffeine_linked_list.h  caffeine_ord_container.c  caffeine_ord_container_type.h  caffeine_ordered_vector.c  caffeine_ordered_vector.h  caffeine_set.c  caffeine_set.h  caffeine_vector.c  caffeine_vector.h
collections/include/: caffeine_array.h  caffeine_collections.h  caffeine_container_type.h  caffeine_containter_interface.h  caffeine_hashmap.h  caffeine_iterator.h  caffeine_linked_list.h  caffeine_ord_container_type.h  caffeine_ordered_vector.h  caffeine_set.h  caffeine_vector.h
collections/include_private/: caffeine_container_functions.h  caffeine_ord_container_functions.h
collections/private/: caffeine_container_functions.h  caffeine_ord_container_functions.h
collections/src/: caffeine_array.c  caffeine_container.c  caffeine_hashmap.c  caffeine_iterator.c  caffeine_linked_list.c  caffeine_ord_container.c  caffeine_ordered_vector.c  caffeine_vector.c
core/: CMakeLists.txt  caffeine_algorithms.c  caffeine_memory.c  caffeine_memory.h  caffeine_platform.h  caffeine_platform_win.c  caffeine_string.c  caffeine_types.h
core/include/: caffeine_algorithms.h  caffeine_core.h  caffeine_flags.h  caffeine_macros.h  caffeine_memory.h  caffeine_string.h
core/src/: caffeine_algorithms.c  caffeine_memory.c  caffeine_string.c
ecs/: CMakeLists.txt  component_set.c  ecs.c  ecs.h
ecs/include/: component_set.h  ecs.h
ecs/src/: component_set.c  ecs.c
engine/: CMakeLists.txt  build-engine.bat  caffeine.h  caffeine_defs.h  caffeine_entry.h  caffeine_flags.h  caffeine_types.h
engine/application/: application.c  application.h  ecs_demo.c
engine/collections/: caffeine_array.c  caffeine_array.h  caffeine_collections.h  caffeine_container.c  caffeine_container_functions.h  caffeine_container_type.h  caffeine_containter_interface.h  caffeine_hashmap.c  caffeine_hashmap.h  caffeine_iterator.c  caffeine_iterator.h  caffeine_linked_list.c  caffeine_linked_list.h  caffeine_ord_container.c  caffeine_ord_container_functions.h  caffeine_ord_container_type.h  caffeine_ordered_vector.c  caffeine_ordered_vector.h  caffeine_set.c  caffeine_set.h  caffeine_vector.c  caffeine_vector.h
engine/collections/private/: caffeine_container_functions.h  caffeine_ord_container_functions.h
engine/core/: CMakeLists.txt  caffeine_algorithms.c  caffeine_ds.h  caffeine_ecs.h  caffeine_events.c  caffeine_events.h  caffeine_filesystem.c  caffeine_filesystem.h  caffeine_input.c  caffeine_input.h  caffeine_input_public.h  caffeine_logging.c  caffeine_logging.h  caffeine_memory.c  caffeine_memory.h  caffeine_platform.h  caffeine_platform_win.c  caffeine_string.c  caffeine_string.h  caffeine_time.c  caffeine_time.h  caffeine_types.h
engine/core/allocators/: cff_allocator.h  system_allocator.c  system_allocator.h
engine/core/ds/: caffeine_ds.h  caffeine_hashmap.h  caffeine_sparseset.h  caffeine_vector.h
engine/core/ecs/: archetype.c  archetype.h  archetype_graph.c  archetype_graph.h  archetype_map.c  archetype_map.h  archetype_storage.c  archetype_storage.h  caffeine_2_ecs.c  caffeine_2_ecs.h  caffeine_ecs.c  caffeine_ecs.h  component_dependency.c  component_dependency.h  component_list.c  component_list.h  ecs.md  ecs_archetype.c  ecs_archetype.h  ecs_archetype_graph.c  ecs_archetype_graph.h  ecs_archetype_index.c  ecs_archetype_index.h  ecs_component.c  ecs_component.h  ecs_component_index.c  ecs_component_index.h  ecs_entity_index.c  ecs_entity_index.h  ecs_name_index.c  ecs_name_index.h  ecs_query.c  ecs_query.h  ecs_storage.c  ecs_storage.h  ecs_storage_index.c  ecs_storage_index.h  ecs_storage_type.h  ecs_system_index.c  ecs_system_index.h  (+4 more)
engine/ecs/: component_set.h  ecs.h
engine/platform/: caffeine_platform.h  caffeine_platform_agnostic.c  caffeine_platform_win.c
